# PLC

./: Cargo.toml  Memory.yaml  PLC.txt  PLC.yaml  README.md  RungLogic.yaml
.github/workflows/: main.yml
Thought/: daa--aaa.odt  main.rs
src/: Memory.rs  StandardFunctions.rs  compostion.rs  file_utils.rs  main.rs  parse.rs  rung_functions.rs  ton.rs  xic.rs
src/composite_pattern/: component.rs  leaf_eor.rs  leaf_sor.rs  leaf_xic.rs  mod.rs  node_rung.rs  root_rung.rs
src/factories_gui/: button_widget.rs  image_widget.rs  mod.rs  textbox_widget.rs
src/layout_manager/: coordinate.rs  mod.rs
src/memory/: memory.rs
src/memory_manager/: memory.rs  mod.rs
