[package]
name = "plc"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
fltk = { version = "1.4", features = ["fltk-bundled"] }
fltk-flex = "^0.2.1"
fltk-theme = "^0.7.1"

serde = { version = "1.0.177", features = ["derive"] }
serde_json = { version = "1.0.104", features = ["raw_value"] }
lazy_static = "1.4"
serde_yaml = "0.9.25"
urlencoding = "2.1.3"